--- a/index.html
+++ b/index.html
@@ -61,22 +61,12 @@
 		<!-- VIDEO FULL BLOCK -->
 		<!-- TESTIMONIALS GRID BLOCK -->
 		<!-- NAVIGATION -->
-		<nav class="navbar bg-color3 my_navbar" data-selector="nav" src="https://dream.blinovskaya.com/images/logo_b.png?120"
-		 style=" position:fixed; width:100%; background-color: rgba(159, 158, 158, 0.61); color: rgb(85, 85, 85); box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 1px 0px;">
+		<nav class="navbar bg-color3 my_navbar" data-selector="nav" src="https://dream.blinovskaya.com/images/logo_b.png?120" style=" position:fixed; width:100%; background-color: rgba(159, 158, 158, 0); color: rgb(85, 85, 85);">
 			<div class="container">
 				<a class="navbar-brand goto" href="#" data-selector="a.btn, a.download-btn, button.btn, a.goto"><img src="https://dream.blinovskaya.com/images/logo_b.png?120" height="25" alt="Your logo" data-selector="img"
 					 style="width: 200px; height: 25px; border-radius: 0px; border-color: rgb(0, 192, 255); border-style: none; border-width: 1px;"></a>
-				<button class="round-toggle navbar-toggle menu-collapse-btn collapsed" data-toggle="collapse" data-target=".navMenuCollapse" data-selector="Футер подвал"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
-					 class="icon-bar"></span> </button>
-				<div class="collapse navbar-collapse navMenuCollapse">
-					<ul class="nav">
 
-						<li data-selector="nav li"><a href="#content-right-2" data-selector="nav a" src="https://dream.blinovskaya.com/images/vip/anastasia.jpg?120" style="color: rgb(251, 252, 252); text-transform: none; font-size: 20px; ">Кто
-								Спикер?<br></a></li>
 
-						<li data-selector="nav li"><a href="#otzyv" data-selector="nav a" style="color:rgb(251, 252, 252); text-transform: none; font-size: 20px; ">Отзывы</a></li>
-					</ul>
-				</div>
 			</div>
 		</nav>
 
