--- a/index.html
+++ b/index.html
@@ -61,14 +61,7 @@
 		<!-- VIDEO FULL BLOCK -->
 		<!-- TESTIMONIALS GRID BLOCK -->
 		<!-- NAVIGATION -->
-		<nav class="navbar bg-color3 my_navbar" data-selector="nav" src="https://dream.blinovskaya.com/images/logo_b.png?120" style=" position:fixed; width:100%; background-color: rgba(159, 158, 158, 0); color: rgb(85, 85, 85);">
-			<div class="container">
-				<a class="navbar-brand goto" href="#" data-selector="a.btn, a.download-btn, button.btn, a.goto"><img src="https://dream.blinovskaya.com/images/logo_b.png?120" height="25" alt="Your logo" data-selector="img"
-					 style="width: 200px; height: 25px; border-radius: 0px; border-color: rgb(0, 192, 255); border-style: none; border-width: 1px;"></a>
 
-
-			</div>
-		</nav>
 
 		<!-- блок записи  -->
 
@@ -115,104 +108,19 @@
 
 
 
-
-		<!-- INTRO VIDEO BACKGROUND -->
-		<header id="intro-video-background" class="intro-block text-center bg-color1 dark-bg double-padding" data-selector="header">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-sm-12 button__record">
-						<div class="slogan" data-selector="Футер подвал" style="">
-							<h1 class="giant-title" data-selector="h1" src="https://dream.blinovskaya.com/images/logo_b.png?120"
-							 style="color: rgb(255, 255, 255); font-size: 60px; background-color: rgba(0, 0, 0, 0); margin-bottom: 70px; margin-top: 20px;">3 марта 2019<br>
-								<strong id="promo_text"><br>
-									Онлайн марафон личностного роста от Елены Блиновской
-								</strong></h1>
-							<p data-selector="p">
-								Получи неделю марафона бесплатно! Иди на встречу своей мечте!
-							</p>
-						</div>
-						<a class="btn btn-lg btn-default-white goto button__record first_btn" id="button__record" value="Click" onmousedown="viewDiv()" href="#" data-selector="a.btn, a.download-btn, button.btn, a.goto"
-						 src="https://dream.blinovskaya.com/images/logo_b.png?120" style="color: rgb(255, 255, 255); border-color: rgb(255, 0, 0); border-radius: 25px; font-size: 20px; background-color: rgb(255, 0, 0);">Записаться и получить
-							Подарок</a>
-					</div>
-				</div>
-			</div>
-			<div class="video-bg">
-				<div id="big-video-wrap">
-					<div id="big-video-vid" class="video-js vjs-default-skin vjs-controls-disabled vjs-has-started vjs-playing" style="width: 1884.44px; height: 1060px; display: block; top: 0px; left: 0px;">
-						<div class="sophis-video-control" draggable="true"></div><video id="big-video-vid_html5_api" class="vjs-tech sophis-video" preload="auto" data-setup="{}" webkit-playsinline=""
-						 style="position: absolute; width: 1884px; height: auto; display: inline-block;" autoplay="" src="video/video_bg.mp4" sophis-video-control="true"></video>
-						<div></div>
-						<div class="vjs-poster" tabindex="-1" style="display: none;"></div>
-						<div class="vjs-text-track-display"></div>
-						<div class="vjs-loading-spinner" style="display: none;"></div>
-						<div class="vjs-big-play-button" aria-live="polite" tabindex="0" aria-label="play video"><span aria-hidden="true"></span></div>
-						<div class="vjs-control-bar">
-							<div class="vjs-play-control vjs-control  vjs-playing" aria-live="polite" tabindex="0">
-								<div class="vjs-control-content"><span class="vjs-control-text">Pause</span></div>
-							</div>
-							<div class="vjs-current-time vjs-time-controls vjs-control">
-								<div class="vjs-current-time-display" aria-live="off"><span class="vjs-control-text">Current Time </span>0:01</div>
-							</div>
-							<div class="vjs-time-divider">
-								<div><span>/</span></div>
-							</div>
-							<div class="vjs-duration vjs-time-controls vjs-control">
-								<div class="vjs-duration-display" aria-live="off"><span class="vjs-control-text">Duration Time </span>0:12</div>
-							</div>
-							<div class="vjs-remaining-time vjs-time-controls vjs-control">
-								<div class="vjs-remaining-time-display" aria-live="off"><span class="vjs-control-text">Remaining Time </span>-0:10</div>
-							</div>
-							<div class="vjs-progress-control vjs-control">
-								<div aria-valuenow="15.21" aria-valuemin="0" aria-valuemax="100" tabindex="0" class="vjs-progress-holder vjs-slider" aria-label="video progress bar" aria-valuetext="0:01">
-									<div class="vjs-load-progress" style="width: 100%;"><span class="vjs-control-text">Loaded: 0%</span></div>
-									<div class="vjs-play-progress" style="width: 15.21%;"><span class="vjs-control-text">Progress: 0%</span></div>
-									<div class="vjs-seek-handle vjs-slider-handle" style="left: 15.21%;"><span class="vjs-control-text">00:00</span></div>
-								</div>
-							</div>
-							<div class="vjs-fullscreen-control vjs-control " aria-live="polite" tabindex="0">
-								<div class="vjs-control-content"><span class="vjs-control-text">Fullscreen</span></div>
-							</div>
-							<div class="vjs-volume-control vjs-control">
-								<div aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" tabindex="0" class="vjs-volume-bar vjs-slider" aria-label="volume level" aria-valuetext="0%">
-									<div class="vjs-volume-level" style="width: 0%;"><span class="vjs-control-text"></span></div>
-									<div class="vjs-volume-handle vjs-slider-handle" style="left: 0%;"><span class="vjs-control-text">00:00</span></div>
-								</div>
-							</div>
-							<div class="vjs-mute-control vjs-control vjs-vol-0" aria-live="polite" tabindex="0">
-								<div><span class="vjs-control-text">Mute</span></div>
-							</div>
-							<div class="vjs-subtitles-button vjs-menu-button vjs-control " aria-live="polite" tabindex="0" aria-haspopup="true" role="button" aria-label="Subtitles Menu" style="display: none;">
-								<div class="vjs-control-content"><span class="vjs-control-text">Subtitles</span></div>
-								<div class="vjs-menu">
-									<ul class="vjs-menu-content">
-										<li class="vjs-menu-item vjs-selected" aria-live="polite" tabindex="0" aria-selected="true">subtitles off</li>
-									</ul>
-								</div>
-							</div>
-							<div class="vjs-captions-button vjs-menu-button vjs-control " aria-live="polite" tabindex="0" aria-haspopup="true" role="button" aria-label="Captions Menu" style="display: none;">
-								<div class="vjs-control-content"><span class="vjs-control-text">Captions</span></div>
-								<div class="vjs-menu">
-									<ul class="vjs-menu-content">
-										<li class="vjs-menu-item vjs-selected" aria-live="polite" tabindex="0" aria-selected="true">captions off</li>
-									</ul>
-								</div>
-							</div>
-							<div class="vjs-chapters-button vjs-menu-button vjs-control " aria-live="polite" tabindex="0" aria-haspopup="true" role="button" aria-label="Chapters Menu" style="display: none;">
-								<div class="vjs-control-content"><span class="vjs-control-text">Chapters</span></div>
-								<div class="vjs-menu">
-									<ul class="vjs-menu-content"></ul>
-									<li class="vjs-menu-title">Chapters</li>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</header><!-- STEPS LEFT BLOCK -->
+		<!--
+	---------------------------------------
+сюда вставляй шапку
+	--------------------------------------
 
 
 
+
+
+	--------------------------------------
+
+сюда вставляй шапку
+	-------------------------------------- -->
 
 		<!-- STEPS LEFT BLOCK -->
 		<section id="steps-left" data-selector="section">
